# Conway-s-Game-of-Life

./: CMakeLists.txt  README.md  config.h  main.c
Headers/: InputManager.h  Vector2.h
src/: InputManager.c  Vector2.c
